--- a/style.css
+++ b/style.css
@@ -51,3 +51,17 @@ textarea{
     font-style: italic;
     font-size: xx-large;
 }
+
+@media only screen and (max-width: 480px) {
+    #form-action {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (min-width: 480px) {
+    #form-action {
+        display: flex;
+        flex-direction: row;
+    }
+}
