--- a/style.css
+++ b/style.css
@@ -1,55 +1,121 @@
-body {
-    padding: 32px;
-    text-align: center;
-    font-family: math;
-}
-
-p,
-div {
-    text-align: justify;
-}
-
-button{
-    border: none;
-    padding: 8px;
-    border-radius: 8px;
-}
-
-.bg-1{
-    background-color: antiquewhite;
-}
-
-.bg-2{
-    background-color: bisque;
-}
-
-.bg-3{
-    background-color: burlywood;
-}
-
-.section-content{
-    margin: 32px;
-}
-
-.section-item{
-    margin-bottom: 8px;
-}
-
-textarea{
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
+* {
     box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    font-size: 16px;
-    resize: none;
+    margin: 0;
+    padding: 0;
 }
 
-.formula{
+body {
+    font-family: Roboto, sans-serif;
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #f0f0f0;
+}
+section {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+ }
+
+h1{
+    text-align: center;
+}
+
+.input-group {
+    width: 100%;
+    margin-right: 8px;
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+textarea {
+    width: 100%;
+    padding: 40px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 64px;
+}
+
+.button-group {
+    margin-bottom: 25px;
+}
+
+button {
+    padding: 8px 16px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: red;
+    color: white;
+}
+
+button:hover {
+    background-color: red;
+}
+
+button.reset {
+    background-color: rgb(177, 91, 91);
+}
+
+button.reset:hover {
+    background-color: pink;
+}
+
+button.reverse {
+    background-color: brown
+}
+
+button.reverse:hover {
+    background-color: brown;
+}
+
+.calculation {
+    font-family: monospace;
+    padding: 10px;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+h2 {
+    color: black;
+    border-bottom: 2px solid #ccc;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+
+.text-italic {
     font-style: italic;
     font-size: xx-large;
+}
+
+.formula {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.formula-title {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: -5px;
+    margin-top: -10px;
+}
+
+footer{
+    margin-top: 10px;
+    font-size: small;
+    text-align: center;
 }
 
 @media only screen and (max-width: 480px) {
